--- a/src/main/resources/templates/userMessage.html
+++ b/src/main/resources/templates/userMessage.html
@@ -117,14 +117,14 @@
                     <ul class="pagination justify-content-end">
                         <!-- 返回首页 -->
                         <li class="page-item" th:if="${notifications.showFirstPage}">
-                            <a class="page-link" id="first-page-a" th:href="${'/message/' + user.getUserId()}" aria-label="Previous" onclick="addLocaleUrlForPage('first-page-a')">
+                            <a class="page-link" id="first-page-a" th:href="${'/message/' + user.getUserId()} + @{/(type=${type})}" aria-label="Previous" onclick="addLocaleUrlForPage('first-page-a')">
                                 <span aria-hidden="true">&laquo;&laquo;</span>
                                 <span class="sr-only">Previous</span>
                             </a>
                         </li>
                         <!-- 上一页 -->
                         <li class="page-item" th:if="${notifications.showPrevious}">
-                            <a class="page-link" id="link-to-last-a" th:href="'/message/'+${user.getUserId()} + @{/(page=${notifications.nowPage} - 1)}" aria-label="Previous"
+                            <a class="page-link" id="link-to-last-a" th:href="'/message/'+${user.getUserId()} + @{/(page=${notifications.nowPage-1},type=${type})}" aria-label="Previous"
                                onclick="addLocaleUrlForPage('link-to-last-a')">
                                 <span aria-hidden="true">&laquo;</span>
                                 <span class="sr-only">Previous</span>
@@ -133,7 +133,7 @@
 
 
                         <li class="page-item" th:each="page : ${notifications.pages}" th:class="${notifications.nowPage == page}? 'page-item active' : 'page-item'">
-                            <a class="page-link" th:href="${'/message/'+user.getUserId()} + @{/(page=${page})}" th:text="${page}" th:id="${page}"
+                            <a class="page-link" th:href="${'/message/'+user.getUserId()} + @{/(page=${page},type=${type})}" th:text="${page}" th:id="${page}"
                                th:onclick="'javascript:addLocaleUrlForPage(\''+${page}+'\')'">
                                 1
                             </a>
@@ -143,7 +143,7 @@
 
                         <!-- 下一页 -->
                         <li class="page-item" th:if="${notifications.showNext}">
-                            <a class="page-link" id="lind-to-next-a" th:href="'/message/'+${user.getUserId()} + @{/(page=${notifications.nowPage} + 1)}" aria-label="Next"
+                            <a class="page-link" id="lind-to-next-a" th:href="'/message/'+${user.getUserId()} + @{/(page=${notifications.nowPage+1},type=${type})}" aria-label="Next"
                                onclick="addLocaleUrlForPage('lind-to-next-a')">
                                 <span aria-hidden="true">&raquo;</span>
                                 <span class="sr-only">Next</span>
@@ -151,7 +151,7 @@
                         </li>
                         <!-- 最后一页 -->
                         <li class="page-item" th:if="${notifications.showEndPage}">
-                            <a class="page-link" id="link-to-end-a"  th:href="'/message/'+${user.getUserId()} + @{/(page=${notifications.totalPage})}"
+                            <a class="page-link" id="link-to-end-a"  th:href="'/message/'+${user.getUserId()} + @{/(page=${notifications.totalPage},type=${type})}"
                                th:if="${notifications.showEndPage}"
                                aria-label="Next" onclick="addLocaleUrlForPage('link-to-end-a')">
                                 <span aria-hidden="true">&raquo;&raquo;</span>
