--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -253,6 +253,9 @@
                                     <span class="badge badge-primary mr-2 tag-hand" onclick="addTag('scala')">
                                         <span class="ml-1">scala</span>
                                      </span>
+                                    <span class="badge badge-primary mr-2 tag-hand" onclick="addTag('Kotlin')">
+                                        <span class="ml-1">Kotlin</span>
+                                     </span>
                                 </div>
                                 <!--平台框架-->
                                 <div class="tab-pane fade" id="frame-work" role="tabpanel" aria-labelledby="frame-work-tab">
