--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -27,7 +27,7 @@
                        onclick="addLocaleUrl('link-hone-a')">主页<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active mx-2">
-                    <a class="nav-link" href="/class" th:text="#{index.lebel}">分类<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/class" th:text="#{index.lebel}">话题<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active mx-2">
                     <a class="nav-link" href="/user" th:text="#{index.user}">用户<span class="sr-only">(current)</span></a>
