--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -310,6 +310,15 @@
                                     <span class="badge badge-info mr-2 tag-hand" onclick="addTag('SqlLite')">
                                         <span class="ml-1">SqlLite</span>
                                      </span>
+                                    <span class="badge badge-info mr-2 tag-hand" onclick="addTag('Oracle')">
+                                        <span class="ml-1">Oracle</span>
+                                     </span>
+                                    <span class="badge badge-info mr-2 tag-hand" onclick="addTag('SQL Server')">
+                                        <span class="ml-1">SQL Server</span>
+                                     </span>
+                                    <span class="badge badge-info mr-2 tag-hand" onclick="addTag('H2')">
+                                        <span class="ml-1">H2</span>
+                                     </span>
                                 </div>
                                 <!--开发工具-->
                                 <div class="tab-pane fade" id="develop-tool" role="tabpanel" aria-labelledby="develop-tool-tab">
@@ -337,6 +346,21 @@
                                     <span class="badge badge-success mr-2 tag-hand" onclick="addTag('Gradle')">
                                         <span class="ml-1">Gradle</span>
                                      </span>
+                                    <span class="badge badge-success mr-2 tag-hand" onclick="addTag('NetBeans')">
+                                        <span class="ml-1">NetBeans</span>
+                                     </span>
+                                    <span class="badge badge-success mr-2 tag-hand" onclick="addTag('PyCharm')">
+                                        <span class="ml-1">PyCharm</span>
+                                     </span>
+                                    <span class="badge badge-success mr-2 tag-hand" onclick="addTag('Navicat')">
+                                        <span class="ml-1">Navicat</span>
+                                     </span>
+                                    <span class="badge badge-success mr-2 tag-hand" onclick="addTag('CLion')">
+                                        <span class="ml-1">CLion</span>
+                                     </span>
+                                    <span class="badge badge-success mr-2 tag-hand" onclick="addTag('PhpStorm')">
+                                        <span class="ml-1">PhpStorm</span>
+                                     </span>
                                 </div>
                                 <!--系统设备-->
                                 <div class="tab-pane fade" id="system" role="tabpanel" aria-labelledby="system-tab">
@@ -348,6 +372,9 @@
                                      </span>
                                     <span class="badge badge-success mr-2 tag-hand" onclick="addTag('Windows')">
                                         <span class="ml-1">Windows</span>
+                                     </span>
+                                    <span class="badge badge-success mr-2 tag-hand" onclick="addTag('MacOS')">
+                                        <span class="ml-1">MacOS</span>
                                      </span>
                                 </div>
                                 <div class="tab-pane fade" id="have-fun" role="tabpanel" aria-labelledby="have-fun-tab">
