添加数据，修复数据bug

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -387,6 +387,9 @@
                                     <span class="badge badge-success mr-2 tag-hand" onclick="addTag('闲聊')">
                                         <span class="ml-1">闲聊</span>
                                      </span>
+                                    <span class="badge badge-success mr-2 tag-hand" onclick="addTag('游戏')">
+                                        <span class="ml-1">游戏</span>
+                                     </span>
                                 </div>
                             </div>
                         </div>
