完成分类页

--- a/src/main/resources/templates/admin/controller.html
+++ b/src/main/resources/templates/admin/controller.html
@@ -270,6 +270,7 @@
                                 <button type="button" class="btn btn-primary" onclick="updateHotUser()">立即重新计算热门用户</button>
                                 <button type="button" class="btn btn-primary" onclick="updateHotTag()">立即重新计算热门标签</button>
                                 <button type="button" class="btn btn-primary" onclick="updateHotQuestion()">立即重新计算热门问题</button>
+                                <button type="button" class="btn btn-primary" onclick="updateTagClass()">立即同步话题页</button>
                             </div>
                             <div class="container" style="height: 30px">
 
