🔧 修复HTTP请求头

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -376,8 +376,9 @@
             <small class="text-muted">•<span style="font-weight: bold;">emoji表情：</span>选中表情后点击确认即可添加，直接点击表情是没办法添加的。
             </small>
             <br/><br/>
-            <small class="text-muted">•<span style="font-weight: bold;">图片上传指南：</span>点击编辑器菜单栏上的图片图标即可选择上传图片，最大支持<span
-                    style="color: red; font-weight: bold;">10MB</span>的图片上传。
+            <small class="text-muted">•<span style="font-weight: bold;">文件上传指南：</span>点击编辑器菜单栏上的上传图标即可选择上传文件或图片，最大支持<span
+                    style="color: red; font-weight: bold;">10MB</span>的文件或图片上传。<br/>
+                    <small th:text="#{publish.issue.supportFile}"></small>
             </small>
             <br/><br/>
             <small class="text-muted">•<span style="font-weight: bold;">最后：</span>友善发帖，并遵守国家相关法律法规，互联网并非法外之地。</small>
