--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -129,6 +129,7 @@
             </div>
             <script type="text/javascript">
                 Vditor.preview(document.getElementById("question-markdown-view"), {
+                    emojiPath: '/js/vditor/images/emoji'
                 });
             </script>
             <hr/>
@@ -352,7 +353,7 @@
                             counter: 100000,
                             height: 400,
                             hint: {
-                                emojiPath: 'https://cdn.jsdelivr.net/npm/vditor@1.8.3/dist/images/emoji',
+                                emojiPath: '/js/vditor/images/emoji',
                                 emoji: emojis
                             },
                             tab: '\t',
