--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -76,17 +76,17 @@
                     <div class="col">
                         <div class="form-group">
                             <label for="issues-class">&nbsp;</label>
-                            <select th:selected="${question.getClassification()}" class="form-control" id="issues-class"
+                            <select class="form-control" id="issues-class"
                                     name="classification">
-                                <option value="null" style="display: none;" selected>
+                                <option value="null" style="display: none;">
                                     [[#{publish.classification}]]
                                 </option>
-                                <option value="提问">提问</option>
-                                <option value="讨论">讨论</option>
-                                <option value="分享">分享</option>
-                                <option value="建议">建议</option>
-                                <option value="Bug">Bug</option>
-                                <option value="灌水">灌水</option>
+                                <option th:selected="${question.getClassification()=='提问'}" value="提问">提问</option>
+                                <option th:selected="${question.getClassification()=='讨论'}" value="讨论">讨论</option>
+                                <option th:selected="${question.getClassification()=='讨论'}" value="讨论">分享</option>
+                                <option th:selected="${question.getClassification()=='建议'}" value="建议">建议</option>
+                                <option th:selected="${question.getClassification()=='Bug'}" value="Bug">Bug</option>
+                                <option th:selected="${question.getClassification()=='灌水'}" value="灌水">灌水</option>
                             </select>
                             <small id="classHelp" class="form-text" style="color: red"
                                    th:text="${classMessage}"></small>
