--- a/src/main/resources/templates/userSetting.html
+++ b/src/main/resources/templates/userSetting.html
@@ -226,7 +226,7 @@
                     <div class="row mt-4">
                         <div class="col text-right">
                             <a href="javascript:void(0);">
-                                <img id="image-captcha" src="/captche/images"
+                                <img title="点击刷新" id="image-captcha" src="/captche/images"
                                      onclick="this.src='/captche/images?'+Math.random()"/>
                             </a>
                         </div>
