--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -333,7 +333,7 @@
                 <div class="row mt-4">
                     <div class="col text-right">
                         <a href="javascript:void(0);">
-                            <img src="/captche/images" onclick="this.src='/captche/images?'+Math.random()"/>
+                            <img title="点击刷新" src="/captche/images" onclick="this.src='/captche/images?'+Math.random()"/>
                         </a>
                     </div>
                     <div class="form-group mr-3">
