📎添加多级评论

--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -227,8 +227,7 @@
                                                 <!-- 评论内容 -->
                                                 <textarea autocomplete="off" class="form-control"
                                                           th:id="${'second-content-' + comment.getCommentId()}"
-                                                          rows="1">
-                                                </textarea>
+                                                          rows="1" placeholder="请自觉遵守互联网相关的政策法规，严禁发布色情、暴力、反动的言论。"></textarea>
                                             </div>
                                         </div>
                                     </div>
@@ -352,7 +351,7 @@
                         const vditor = new Vditor('comment-text', {
                             toolbar: ['emoji', 'headings', 'bold', 'italic', 'strike', '|', 'line', 'quote', 'list', 'ordered-list', 'check', 'code', 'inline-code', 'undo', 'redo', 'upload', 'link', 'table', 'record', 'both', 'preview', 'fullscreen'],
                             typewriterMode: true,
-                            placeholder: "请输入内容",
+                            placeholder: "请自觉遵守互联网相关的政策法规，严禁发布色情、暴力、反动的言论。",
                             counter: 100000,
                             height: 400,
                             hint: {
