--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -12,8 +12,8 @@
     <link href="/css/bootstrap-tagsinput.css" rel="stylesheet">
     <script src="/js/jquery-3.4.1.min.js" type="text/javascript"></script>
     <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="/js/vditor@1.9.0/index.classic.css"/>
-    <script src="/js/vditor@1.9.0/index.min.js"></script>
+    <link rel="stylesheet" href="/js/vditor@1.9.0/dist/index.classic.css"/>
+    <script src="/js/vditor@1.9.0/dist/index.min.js"></script>
     <style type="text/css">
         body {
         / / background-image: url("https://api.isoyu.com/bing_images.php");
@@ -104,7 +104,7 @@
                 </div>
                 <small id="textHelp" class="form-text" style="color: red" th:text="${textMessage}"></small>
                 <script src="/js/vditor/emoji_map.js" type="text/javascript"></script>
-                <script src="/js/vditor.js"></script>
+                <script src="/js/vditor.js" type="text/javascript"></script>
                 <input type="hidden" name="questionId" th:value="${question.getQuestionId()}">
                 <input type="hidden" name="createTime" th:value="${question.getCreateTime()}">
 
