--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
     <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <style type="text/css">
         body {
-        / / background-image: url("https://api.isoyu.com/bing_images.php");
+            /*background-image: url("https://api.isoyu.com/bing_images.php");*/
             background-color: #efefef;
         }
 
@@ -186,7 +186,7 @@
                                 •<span th:text="${question.likeCount}">人数</span><span>人点赞</span>
                                 •<span th:text="${question.commentCount}">人数</span><span>个回复</span>
                                 •<span th:text="${question.viewCount}">人数</span><span>次浏览</span>
-                                •<span>最新回复时间：</span><span th:text="${question.alterTime}">人数</span>
+                                •<span>最新回复：</span><span th:text="${question.alterTime}">人数</span>
                             </span>
                         </p>
                     </div>
