--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -181,7 +181,7 @@
                                 •<span th:text="${question.likeCount}">人数</span><span>人点赞</span>
                                 •<span th:text="${question.commentCount}">人数</span><span>个回复</span>
                                 •<span th:text="${question.viewCount}">人数</span><span>次浏览</span>
-                                •<span>最新修改时间：</span><span th:text="${question.alterTime}">人数</span>
+                                •<span>最新修改：</span><span th:text="${question.alterTime}">人数</span>
                             </span>
                         </p>
                     </div>
